# terraform-ui

./: .coverage.yaml  .editorconfig  .gitignore  .golangci.yaml  .goreleaser.yaml  .releaserc  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile.coverage  EXPLORATION.md  LICENSE  Makefile  PLAN.md  README.md  cliff.toml  go.mod  go.sum  mise.toml  package-lock.json  package.json  package.sh  pyproject.toml  release-please-config.json  requirements.txt  skills-lock.json  tfui.example.yaml
.agent/agents/: cli-checker.md  code-checker.md  security-checker.md  tui-checker.md
.agents/agents/: arch-checker.md  cli-checker.md  (+2 more)
.claude/: CLAUDE.md  settings.json  ux-guidelines.md
.github/: PULL_REQUEST_TEMPLATE.md
Formula/: terraform-ui.rb
demo/: Dockerfile  README.md  docker-compose.yml  generate.sh  stitch.py  stitch.sh
docs/: 404.md  Gemfile  _config.yml  architecture.md  blast-radius.md  cli-io-contract.md  cli-reference.md  cli-ux.md  configuration.md  demo.md  getting-started.md  index.md  macro-language.md  phantom-changes.md  risk-analysis.md  roadmap.md  robots.txt  testing.md  tui-ux.md
lib/: tfui.sh
scripts/: install.sh  package.sh
tests/: agent-mode.bats  animation.bats  apply-flow.bats  blast-radius.bats  cli.bats  diff.bats  environment.bats  error-parsing.bats  exec.bats  format.bats  init.bats  lifecycle.bats  line-management.bats  module-grouping.bats  pattern-matching.bats  phantom-changes.bats  plan-flow.bats  plan-tree.bats  policy.bats  render.bats  state-summary.bats  state.bats  strategy.bats  tfui-test.sh  ui-lifecycle.bats
(+751 files in other folders)
