[project]
name = "terraform-ui-demo"
version = "0.1.0"
description = "Demo tooling for terraform-ui (frame stitching, asciicast generation)"
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []